k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  type: LoadBalancer
  selector:
    app: api-app
  ports:
  - port: 80
    targetPort: 3000
